--- a/page/components/Bio/Bio.module.scss
+++ b/page/components/Bio/Bio.module.scss
@@ -1,17 +1,20 @@
 .Bio{
     text-align: center;
-    min-height: 100vh;
+    min-height: 50vh;
 
     max-width: 800px;
     color: #000;
-    margin: 0 auto;
+    margin: 50px auto;
+
+    @media screen and (min-width: 700px) {
+        margin: 250px auto 50px auto;
+    }
 
     h1{
         font-size: 3rem;
     }
 
-    p{
-        
+    p{        
         padding: 5%;
     }
 }
