make foorm better visual look

--- a/page/components/Bio/Bio.module.scss
+++ b/page/components/Bio/Bio.module.scss
@@ -4,7 +4,7 @@
 
     max-width: 800px;
     color: #000;
-    margin: 150vh 1% 50px 1%;
+    margin: 50px 1% 50px 1%;
 
     h1{
         margin-bottom: 5px;
