next changes of arts gallery visual content

--- a/page/components/Bio/Bio.module.scss
+++ b/page/components/Bio/Bio.module.scss
@@ -4,8 +4,9 @@
 
     max-width: 800px;
     color: #000;
-    margin: 50px 1% 50px 1%;
+    margin: 150px 1% 50px 1%;
     padding-top: 80px;
+    padding-left: 80px;
 
     h1 {
         margin-bottom: 5px;
