--- a/page/components/Bio/Bio.module.scss
+++ b/page/components/Bio/Bio.module.scss
@@ -6,10 +6,28 @@
     color: #000;
     margin: 150px 1% 50px 1%;
     padding-top: 80px;
-    padding-left: 80px;
+
+    
 
     h1 {
         margin-bottom: 5px;
+    }
+
+    p {
+        margin-bottom: 15px;
+        line-height: 1.7em;
+    }
+
+    h5 {
+        font-size: 1.15em;
+        margin-bottom: 5px;
+
+    }
+
+
+
+    @media screen and (min-width : 500px) {
+        padding-left: 80px;
     }
 
 
