--- a/page/components/Bio/Bio.module.scss
+++ b/page/components/Bio/Bio.module.scss
@@ -2,27 +2,64 @@
     text-align: left;
     min-height: 50vh;
 
-    max-width: 800px;
+    max-width: 87vw;
     color: #000;
     margin: 150px 1% 50px 1%;
     padding-top: 80px;
-    
+
 
     h1 {
         margin-bottom: 5px;
     }
 
-    p {
+    p,li {
         margin-bottom: 75px;
         line-height: 1.7em;
     }
 
-
     @media screen and (min-width : 500px) {
         padding-left: 80px;
+
+        h1 {
+            font-size: 0.75em;
+        }
+        p,li {
+            font-size: 0.5em;
+        }
+        p,li,
+        h1 {
+            color: #000;
+            background-color: #fff;
+            margin-right: 1%;
+            margin-left: 1%;
+            width: 100%;
+        }
     }
 
+    @media screen and (min-width: 750px),
+    (orientation: landscape) {
+        h1 {
+            font-size: 2.25em;
+        }
 
-    
+        p,li {
+            font-size: 1.75em;
+            font-weight: bold;
+        }
+    }
+
+    @media screen and (min-width: 750px) {}
+
+    @media screen and (min-width: 1000px) {
+
+        h1 {
+            font-size: 3.33em;
+        }
+
+        p,li {
+            font-size: 2em;
+            font-weight: bold;
+        }
+    }
 
 }
