--- a/page/components/Bio/Bio.module.scss
+++ b/page/components/Bio/Bio.module.scss
@@ -10,11 +10,14 @@
 
     h1 {
         margin-bottom: 5px;
+        font-weight: 700;
     }
 
     p,li {
-        margin-bottom: 75px;
+        margin-bottom: 37px;
         line-height: 1.7em;
+
+        a{text-decoration: underline;}
     }
 
     @media screen and (min-width : 500px) {
@@ -44,7 +47,6 @@
 
         p,li {
             font-size: 1.75em;
-            font-weight: bold;
         }
     }
 
@@ -58,7 +60,6 @@
 
         p,li {
             font-size: 2em;
-            font-weight: bold;
         }
     }
 
