--- a/page/components/Bio/Bio.module.scss
+++ b/page/components/Bio/Bio.module.scss
@@ -4,8 +4,8 @@
 
     max-width: 87vw;
     color: #000;
-    margin: 10vh 1% 10vh 1%;
-    padding-top: 80px;
+    margin: 3vh 3% 10vh 3%;
+    padding-top: 3vh;
 
 
     h1 {
